--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   cached_network_image:
   shimmer:
   page_transition:
+  share_plus:
 
 dev_dependencies:
   flutter_launcher_icons:
