--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,5 +51,10 @@ flutter:
     - assets/
 
 flutter_launcher_icons:
-  image_path: "assets/logo.png"
   android: true
+  min_sdk_android: 21
+  image_path_android: "assets/logo.png"
+  adaptive_icon_foreground: "assets/logo.png"
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_monochrome: "assets/logo_monochrome.png"
+  adaptive_icon_foreground_inset: 20
