--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: go_stream
-description: "A new Flutter project."
+description: "A stream app for movies built with Flutter. It supports dynamic themes, search functionality, and a user-friendly interface."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.4+1
+version: 1.0.5+1
 
 environment:
   sdk: ^3.7.2
